argo/templates/argoGrpcIngres.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  entryPoints:
    - websecure
  tls:
    secretName: argo-tls
  routes:
    - kind: Rule
      match: Host(`argo.trevorlichfield.com`) && Header(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
