argo/templates/argoHttpIngress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  entryPoints:
    - websecure
  tls:
    secretName: argo-tls
  routes:
    - kind: Rule
      match: Host(`argo.trevorlichfield.com`) && PathPrefix(`/`)
      priority: 10
      services:
        - name: argocd-server
          port: 80
